--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,21 +10,31 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+
     - name: Checkout
       uses: actions/checkout@v1
 
-    - name: Configure AWS Credentials
+    - name: Extract branch name
+      shell: bash
+      run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+      id: extract_branch
+
+    - name: Configure AWS Credentials for branch master
+      if: ${{ steps.extract_branch.outputs.branch == 'master' }}
       uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: eu-central-1
 
-    - name: Extract branch name
-      shell: bash
-      run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
-      id: extract_branch
-  
+    - name: Configure AWS Credentials for branch production
+      if: ${{ steps.extract_branch.outputs.branch == 'production' }}
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+        aws-region: eu-central-1
+    
     - name: Build
       run: cp -fr editions dist
     
@@ -34,4 +44,4 @@ jobs:
 
     - name: Deploy Production
       if: ${{ steps.extract_branch.outputs.branch == 'production' }}
-      run: aws s3 sync dist/. s3://www.awsug.ch --delete --acl public-read --cache-control max-age=600
+      run: aws s3 sync dist/. s3://awsug-website --delete --acl public-read --cache-control max-age=600
